<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/white_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/white_text_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/blue_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/blue_text_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/green_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/green_text_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/red_count"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/red_text_hint" />

    <EditText
        android:id="@+id/black_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/black_text_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/land_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/land_text_hint"
        android:inputType="number" />
    
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_str"
        android:onClick="onSwaggit" />
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_str" />
    
</LinearLayout>